--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
-        <div class="col-10 col-md-8 col-lg-6 col-xl-5">
+        <div class="col-8 col-md-6 col-lg-5 col-xl-4">
             <div class="card">
                 <div class="card-header">
                     LOGIN
@@ -9,25 +9,29 @@
                     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                         <div class="mb-3">
                             <label for="email">Email</label>
-                            <input type="email" formControlName="email" class="form-control" id="email" required maxlength="40">
-                            <div class="text-danger" *ngIf="formControls['email'].hasError('required')">*Email required</div>
-                            <div class="text-danger" *ngIf="formControls['email'].hasError('email')">*Invalid email format</div>
+                            <input type="email" formControlName="email" class="form-control" id="email" required
+                                maxlength="40">
+                            <div class="text-danger" *ngIf="formControls['email'].hasError('required')">Email required
+                            </div>
+                            <div class="text-danger" *ngIf="formControls['email'].hasError('email')">Invalid email
+                                format</div>
                         </div>
                         <div class="mb-3">
                             <label for="password">Password</label>
-                            <input type="password" formControlName="password" class="form-control" id="password" required maxlength="20">
+                            <input type="password" formControlName="password" class="form-control" id="password"
+                                required maxlength="20">
                             <div class="text-danger" *ngIf="formControls['password'].hasError('required')">
-                                *Password required
+                                Password required
                             </div>
                             <div class="text-danger" *ngIf="formControls['password'].hasError('minlength')">
-                                *Password must be at least 6 characters
+                                Password must be at least 6 characters
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Login</button>
+                        <button type="submit" class="btn btn-primary mb-3" [disabled]="loginForm.invalid">Login</button>
 
                         <div class="login-message" *ngIf="loginMessage"
-                            [ngClass]="{'success-message': loginMessageType === 'success', 'danger-message': loginMessageType === 'danger'}">
-                            {{ loginMessage }}
+                        [ngClass]="loginMessageType === 'success' ? 'alert alert-success' : (loginMessageType === 'danger' ? 'alert alert-danger' : '')">
+                        <strong>{{ loginMessage }}</strong>
                         </div>
                     </form>
                 </div>
@@ -35,5 +39,3 @@
         </div>
     </div>
 </div>
-
-
