--- a/src/app/components/teacher-dashboard/add-student/add-student.component.html
+++ b/src/app/components/teacher-dashboard/add-student/add-student.component.html
@@ -1,1 +1,50 @@
-<p>add-student works!</p>
+<app-teacher-dashboard></app-teacher-dashboard>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-8 col-md-6 col-lg-5 col-xl-4">
+            <div class="card">
+                <div class="card-header">
+                    ADD STUDENT
+                </div>
+                <div class="card-body">
+                    <form [formGroup]="addStudentForm" (ngSubmit)="onSubmit()">
+                        <div class="mb-3" >
+                            <label for="name">Name</label>
+                            <input #inputName [ngClass]="{'success-border': !formControls['name'].hasError('required') && !formControls['name'].hasError('minlength') && inputName.value.trim().length > 2}" 
+                            type="text" formControlName="name" class="form-control" id="name" required maxlength="20">
+                            <div class="text-danger" *ngIf="formControls['name'].hasError('required') || formControls['name'].hasError('minlength') || !(inputName.value.trim().length > 2)" >Name required and must be at least 3 characters </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="surname">Surname</label>
+                            <input #inputSurname [ngClass]="{'success-border': !formControls['surname'].hasError('required') && !formControls['surname'].hasError('minlength') && inputSurname.value.trim().length > 2}" 
+                            type="text" formControlName="surname" class="form-control" id="surname" required>
+                            <div class="text-danger" *ngIf="formControls['surname'].hasError('required') || formControls['surname'].hasError('minlength') || !(inputSurname.value.trim().length > 2) ">Surname required and must be at least 3 characters </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email">Email</label>
+                            <input #inputEmail [ngClass]="{'success-border': !formControls['email'].hasError('required') && !formControls['email'].hasError('minlength') && !formControls['email'].hasError('email') && inputEmail.value.trim().length > 2}" 
+                            type="text" formControlName="email" class="form-control" id="email" required>
+                            <div class="text-danger" *ngIf="formControls['email'].hasError('required') || formControls['email'].hasError('minlength') || formControls['email'].hasError('email') || !(inputEmail.value.trim().length > 2) ">Email required , correct format and must be at least 3 characters </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="studentNumber">Student No</label>
+                            <input #inputStudentNumber [ngClass]="{'success-border': !formControls['no'].hasError('required') && !formControls['no'].hasError('pattern')}"
+                            type="number" formControlName="no" class="form-control no-spinners" id="no" required>
+                            <div class="text-danger" *ngIf="formControls['no'].hasError('required')">Student No required and only number</div>
+                            <div class="text-danger" *ngIf="formControls['no'].hasError('pattern')">Student Number must be a between 3-15 digits</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="password">Password</label>
+                            <input #inputPassword [ngClass]="{'success-border': !formControls['password'].hasError('required') && !formControls['password'].hasError('minlength') && inputPassword.value.trim().length > 5}"
+                            type="password" formControlName="password" class="form-control" id="password" required maxlength="20">
+                            <div class="text-danger" *ngIf="formControls['password'].hasError('required') || formControls['password'].hasError('minlength') || !(inputPassword.value.trim().length > 5) "> Password required and must be at least 6 characters </div>
+
+                        </div>
+                        <button type="submit" class="btn btn-primary" [disabled]="editErrors(inputName) || editErrors(inputSurname) || editErrors(inputEmail) || editErrors(inputStudentNumber) || editErrors(inputPassword) || addStudentForm.invalid">Add</button>
+        
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
