--- a/src/app/components/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/components/teacher-dashboard/teacher-dashboard.component.html
@@ -1,1 +1,21 @@
-<p>teacher-dashboard works!</p>
+<div *ngIf="userInfo" class="d-flex justify-content-center">
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <div class="card text-center">
+                    <div class="card-header">
+                        <h3>TEACHER DASHBOARD</h3>
+                    </div>
+                    <div class="card-body">
+                        <p> {{ userInfo.email }} </p>
+                        <button class="btn btn-sm btn-danger" (click)="logout()">Logout</button>
+                    </div>
+                    <div class="card-footer text-muted">
+                        <button class="btn btn-outline-primary" style="margin-right: 10px;" (click)="viewStudents()" >View Students</button>
+                        <button class="btn btn-outline-dark" (click)="addStudent()">Add Student</button>
+                      </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
