--- a/src/app/components/teacher-dashboard/view-students/view-students.component.html
+++ b/src/app/components/teacher-dashboard/view-students/view-students.component.html
@@ -1,3 +1,89 @@
 <app-teacher-dashboard></app-teacher-dashboard>
 
+<div class="container">
+    <div class="row pt-3 pb-4">
+        <div class="col">
+            <h1>Students</h1>
+        </div>
+    </div>
 
+    <ngb-pagination  [collectionSize]="students.length" [(page)]="page" [pageSize]="pageSize" [boundaryLinks]="true">
+        <ng-template ngbPaginationPages let-page let-pages="pages">
+            <li class="ngb-custom-pages-item" *ngIf="pages.length > 0">
+                <div class="mb-3 d-flex flex-nowrap px-2">
+                    <label id="paginationInputLabel" for="paginationInput" class="col-form-label me-2 ms-1">Page</label>
+                    <input
+                        #i
+                        type="text"
+                        inputmode="numeric"
+                        pattern="[0-9]*"
+                        class="form-control custom-pages-input"
+                        id="paginationInput"
+                        [value]="page"
+                        (keyup.enter)="selectPage(i.value)"
+                        (blur)="selectPage(i.value)"
+                        (input)="formatInput($any($event).target)"
+                        aria-labelledby="paginationInputLabel paginationDescription"
+                        style="text-align: center; width: 3.0rem"/>
+                    <span id="paginationDescription" class="col-form-label text-nowrap px-2"> of {{pages.length}}</span>
+                </div>
+            </li>
+        </ng-template>
+    </ngb-pagination>
+
+    <table class="table table-bordered bordered-light" >
+        <thead>
+            <tr class="table-dark" align="center" valign="middle">
+                <th>No</th>
+                <th>Email</th>
+                <th>Name</th>
+                <th>Surname</th>
+                <th>Midterm Exam</th>
+                <th>Final Exam</th>
+                <th>Absenteeism</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="table-secondary" *ngFor="let student of getStudentsOnCurrentPage()" align="center" valign="middle">
+                <td>{{ student.no }}</td>
+                <td>{{ student.email }}</td>
+                <td>{{ student.name }}</td>
+                <td>{{ student.surname }}</td>
+                <td>{{ student.midterm }}</td>
+                <td>{{ student.final }}</td>
+                <td>{{ student.absenteeism }}</td>
+                <td>
+                    <div class="btn-group" role="group" style="display:flex; justify-content:space-between">
+                        <a type="button" class="btn btn-success">Edit</a>
+                        <a type="button" class="btn btn-primary">Message</a>
+                        <a type="button" class="btn btn-danger" (click)="setSelectedStudent(student._id)" data-toggle="modal" data-target="#deleteStudentModal">Delete</a>
+                    </div>
+                </td>
+            </tr>
+            <tr *ngIf="students.length === 0" align="center" valign="middle">
+                <td colspan="8">Student not available</td>
+              </tr>
+        </tbody>
+    </table>
+</div>
+
+<div class="modal fade" id="deleteStudentModal" tabindex="-1" role="dialog" aria-labelledby="deleteStudentModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteStudentModalLabel">Delete Student</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+         Are you sure you want to delete this student?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-danger" (click)="confirmDelete(selectedStudent)">Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
