--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -11,20 +11,22 @@
                             <label for="email">Email</label>
                             <input type="email" formControlName="email" class="form-control" id="email" required
                                 maxlength="40">
-                            <div class="text-danger" *ngIf="formControls['email'].hasError('required')">Email required
+                            <div class="text-danger" *ngIf="formControls['email'].hasError('required')">
+                                <span> <strong> Email required </strong></span>
                             </div>
-                            <div class="text-danger" *ngIf="formControls['email'].hasError('email')">Invalid email
-                                format</div>
+                            <div class="text-danger" *ngIf="formControls['email'].hasError('email')">
+                               <span> <strong> Invalid email format </strong></span>
+                            </div>
                         </div>
                         <div class="mb-3">
                             <label for="password">Password</label>
                             <input type="password" formControlName="password" class="form-control" id="password"
                                 required maxlength="20">
                             <div class="text-danger" *ngIf="formControls['password'].hasError('required')">
-                                Password required
+                                <span> <strong> Password required </strong></span> 
                             </div>
                             <div class="text-danger" *ngIf="formControls['password'].hasError('minlength')">
-                                Password must be at least 6 characters
+                                <span> <strong>  Password must be at least 6 characters </strong></span> 
                             </div>
                         </div>
                         <button type="submit" class="btn btn-primary mb-3" [disabled]="loginForm.invalid">Login</button>
