--- a/src/app/components/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/components/teacher-dashboard/teacher-dashboard.component.html
@@ -7,7 +7,7 @@
                         <h3>TEACHER DASHBOARD</h3>
                     </div>
                     <div class="card-body">
-                        <p> {{ userInfo.email }} </p>
+                        <p> Welcome <strong> {{ userInfo.email }} </strong>  </p>
                         <button class="btn btn-sm btn-danger" (click)="logout()">Logout</button>
                     </div>
                     <div class="card-footer text-muted">
