--- a/src/app/components/teacher-dashboard/add-student/add-student.component.html
+++ b/src/app/components/teacher-dashboard/add-student/add-student.component.html
@@ -9,7 +9,6 @@
                 <div class="card-body">
                     <form [formGroup]="addStudentForm" (ngSubmit)="addStudent()">
                         <div class="mb-3" >
-
                             <input placeholder="Name" #inputName [ngClass]="{'success-border': !formControls['name'].hasError('required') && !formControls['name'].hasError('minlength') && inputName.value.trim().length > 2}" 
                             type="text" formControlName="name" class="form-control" id="name" required maxlength="20">
                             <div class="text-danger" *ngIf="formControls['name'].hasError('required') || formControls['name'].hasError('minlength') || !(inputName.value.trim().length > 2)" >
@@ -18,7 +17,6 @@
                             </div>
                         </div>
                         <div class="mb-3">
-
                             <input placeholder="Surname" #inputSurname [ngClass]="{'success-border': !formControls['surname'].hasError('required') && !formControls['surname'].hasError('minlength') && inputSurname.value.trim().length > 2}" 
                             type="text" formControlName="surname" class="form-control" id="surname" required maxlength="20">
                             <div class="text-danger" *ngIf="formControls['surname'].hasError('required') || formControls['surname'].hasError('minlength') || !(inputSurname.value.trim().length > 2) ">
@@ -26,7 +24,6 @@
                             </div>
                         </div>
                         <div class="mb-3">
-
                             <input placeholder="Email" #inputEmail [ngClass]="{'success-border': !formControls['email'].hasError('required') && !formControls['email'].hasError('minlength') && !formControls['email'].hasError('email') && inputEmail.value.trim().length > 2}" 
                             type="text" formControlName="email" class="form-control" id="email" required maxlength="40">
                             <div class="text-danger" *ngIf="formControls['email'].hasError('required') || formControls['email'].hasError('minlength') || formControls['email'].hasError('email') || !(inputEmail.value.trim().length > 2) ">
@@ -34,7 +31,6 @@
                             </div>
                         </div>
                         <div class="mb-3">
-
                             <input placeholder="No" #inputStudentNumber [ngClass]="{'success-border': !formControls['no'].hasError('required') && !formControls['no'].hasError('pattern')}"
                             type="number" formControlName="no" class="form-control no-spinners" id="no" required>
                             <div class="text-danger" *ngIf="formControls['no'].hasError('required')">
@@ -47,11 +43,10 @@
                         <div class="mb-3">
 
                             <input placeholder="Password" #inputPassword [ngClass]="{'success-border': !formControls['password'].hasError('required') && !formControls['password'].hasError('minlength') && inputPassword.value.trim().length > 5}"
-                            type="password" formControlName="password" class="form-control" id="password" required maxlength="20">
+                            type="text" formControlName="password" class="form-control" id="password" required maxlength="20">
                             <div class="text-danger" *ngIf="formControls['password'].hasError('required') || formControls['password'].hasError('minlength') || !(inputPassword.value.trim().length > 5) ">
                                 <span> <strong> Password required and must be at least 6 characters </strong> </span>
                             </div>
-
                         </div>
                         <button type="submit" class="btn btn-primary mb-3" [disabled]="editErrors(inputName) || editErrors(inputSurname) || editErrors(inputEmail) || editErrors(inputStudentNumber) || editErrors(inputPassword) || addStudentForm.invalid">Add</button>
                         <div class="addStudentMessage" *ngIf="addStudentMessage"
@@ -64,4 +59,3 @@
         </div>
     </div>
 </div>
-
