Added: Create, list and delete exams from teacher dashboard

--- a/src/app/components/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/components/teacher-dashboard/teacher-dashboard.component.html
@@ -12,7 +12,8 @@
                     </div>
                     <div class="card-footer text-muted">
                         <button class="btn btn-outline-primary" style="margin-right: 10px;" (click)="viewStudents()" >View Students</button>
-                        <button class="btn btn-outline-dark" (click)="addStudent()">Add Student</button>
+                        <button class="btn btn-outline-dark" style="margin-right: 10px;" (click)="addStudent()" >Add Student</button>
+                        <button class="btn btn-outline-info" (click)="createExam()" >Create Exam</button>
                       </div>
                 </div>
             </div>
