--- a/src/app/components/teacher-dashboard/view-students/view-students.component.html
+++ b/src/app/components/teacher-dashboard/view-students/view-students.component.html
@@ -259,7 +259,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="sendMessageModalLabel"> <strong> Send Message </strong></h5>
-                <button type="button" class="btn btn-warning" data-toggle="modal" data-dismiss="modal" data-target="#viewMessagesModal"> View Messages </button>
+                <button type="button" class="btn btn-warning" data-toggle="modal" data-dismiss="modal" data-target="#viewMessagesModal"> View Messages <strong> ({{selectedStudentMessages.length}}) </strong>  </button>
             </div>
 
             <div class="modal-body">
