--- a/src/app/components/teacher-dashboard/create-exam/create-exam.component.html
+++ b/src/app/components/teacher-dashboard/create-exam/create-exam.component.html
@@ -146,7 +146,10 @@
                                     <p><strong>Duration:</strong> {{ exam.duration }} minutes</p>
                                 </div>
                                 <div class="card-footer">
-                                    <button type="button" class="btn btn-info">View Students</button>
+                                    <button type="button" class="btn btn-info"
+                                    (click)="setSelectedExam(exam._id, exam.name, exam.date, exam.time, exam.type, exam.questionType, exam.numberOfQuestions, exam.duration , exam.registeredStudents)"
+                                    data-toggle="modal" data-target="#viewStudentsModal"
+                                    >View Students</button>
                                 </div>
                             </div>
                         </div>
@@ -161,5 +164,110 @@
             </div>
         </div>
 
+    </div>
+</div>
+
+<div class="modal fade" id="viewStudentsModal" tabindex="-1" role="dialog" aria-labelledby="viewStudentsModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="viewStudentsModalLabel"> <strong> {{selectedExamName}} {{selectedExamType}}</strong></h5>
+                <button (click)="getStudents()" type="button" class="btn btn-warning" data-toggle="modal" data-dismiss="modal" data-target="#registerStudentsToExamModal"> Add Student </button>
+            </div>
+            <h5 class="text-center mt-3"> <strong> REGISTERED STUDENTS </strong> </h5>
+            <div class="modal-body text-center">
+            <div class="container">
+                <div *ngFor="let registeredStudent of selectedExamRegisteredStudents" class="student-card mb-5">
+                    <div class="card view-registered-student-card student-card">
+                        <div class="card-body">
+                            <h5> Student Number</h5>
+                            <p><strong> {{ registeredStudent.no }} </strong></p>
+                            <i (click)="removeRegisteredStudent(selectedExamId , registeredStudent.no)" class="fa-solid fa-xmark fa-lg" style="color: #ff0000;"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                <div *ngIf ="selectedExamRegisteredStudents.length === 0">
+                    <p class="alert alert-danger">
+                        No student registered for the <strong> {{selectedExamName}} {{selectedExamType}} </strong> exam was found
+                    </p>
+                </div>
+            </div>
+            
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary active" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="registerStudentsToExamModal" tabindex="-1" role="dialog" aria-labelledby="registerStudentsToExamModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="registerStudentsToExamModalLabel"> <strong> {{selectedExamName}} {{selectedExamType}} </strong></h5>
+                <button type="button" class="btn btn-warning" data-toggle="modal" data-dismiss="modal" data-target="#viewStudentsModal"> View Students </button>
+            </div>
+
+            <h5 class="text-center mt-3"> <strong> STUDENTS  </strong> </h5>
+
+            <div class="div-search-input">
+                <input class="search-input mb-3" type="text" [(ngModel)]="searchText" (input)="searchStudents()" placeholder="Search Student" />
+            </div>
+
+            <ngb-pagination style="margin:10px;" [collectionSize]="getTotalPages() * pageSize" [(page)]="page" [pageSize]="pageSize" [boundaryLinks]="true">
+                <ng-template ngbPaginationPages let-page let-pages="pages">
+                    <li class="ngb-custom-pages-item " *ngIf="pages.length > 0 ">
+                        <div class="d-flex flex-nowrap px-2 ">
+                            <label id="paginationInputLabel" for="paginationInput" class="col-form-label me-2 ms-1">Page</label>
+                            <input #i type="text" inputmode="numeric" pattern="[0-9]*" class="form-control custom-pages-input"
+                                id="paginationInput" [value]="page" (keyup.enter)="selectPage(i.value)"
+                                (blur)="selectPage(i.value)" (input)="formatInput($any($event).target)"
+                                aria-labelledby="paginationInputLabel paginationDescription" style="text-align: center; width: 3.0rem" />
+                            <span id="paginationDescription" class="col-form-label text-nowrap px-2"> of {{getTotalPages()}} </span>
+                        </div>
+                    </li>
+                </ng-template>
+            </ngb-pagination>
+
+            <div class="modal-body text-center">
+                <div *ngFor="let student of getStudentsOnCurrentPage()" class="student-card mb-5">
+                    <div class="container">
+                        <div class="card student-card">
+                            <div class="card-header">
+                                <p><strong>Student Number:</strong> {{ student.no }}</p>
+                                <div>
+                                  <p *ngIf="isStudentRegistered(student.no)" class="badge bg-success">Registered </p>
+                                  <p *ngIf="!isStudentRegistered(student.no)" class="badge bg-danger">Not Registered </p>
+                                </div>
+                              </div>
+                            <div class="card-body">
+                                <h5 class="card-title">{{ student.name }} {{ student.surname }}</h5>
+                            </div>
+    
+                            <div class="card-footer">
+                                <button type="button" (click)="registerStudentForExam(selectedExamId , student.no)" class="btn btn-primary btn-sm">Register</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div *ngIf ="getStudentsOnCurrentPage().length === 0">
+                    <p class="alert alert-danger">
+                        <strong> Student not available </strong>
+                    </p>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary active" data-dismiss="modal">Close</button>
+            </div>
+
+            <div class="container mt-2" *ngIf="registerStudentToExamMessage">
+                <div class="registerStudentToExamMessage" 
+                [ngClass]="registerStudentToExamMessageType === 'success' ? 'alert alert-success' : (registerStudentToExamMessageType === 'danger' ? 'alert alert-danger' : '')">
+                <strong>{{ registerStudentToExamMessage }} </strong>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
