--- a/src/app/components/teacher-dashboard/create-exam/create-exam.component.html
+++ b/src/app/components/teacher-dashboard/create-exam/create-exam.component.html
@@ -104,27 +104,24 @@
                             </div>
                         </div>
                         
-
                         <button type="submit" [disabled]="createExamForm.invalid || editErrors(inputName)"
                             class="btn btn-sm btn-primary">Create</button>
-
-                            <div class="container mt-2" *ngIf="createExamMessage">
+                            <div class="container mt-3" *ngIf="createExamMessage">
                                 <div class="createExamMessage" 
                                 [ngClass]="createExamMessageType === 'success' ? 'alert alert-success' : (createExamMessageType === 'danger' ? 'alert alert-danger' : '')">
                                 <strong>{{ createExamMessage }}</strong>
                                 </div>
                             </div>
-    
                     </form>
                 </div>
             </div>
         </div>
         <div class="col-8 col-md-6 col-lg-5 col-xl-4 mt-2">
-            <div class="card view-exams-card-main">
+            <div class="card exams-card-main">
                 <div class="card-header text-center">
                     <strong> EXAMS </strong>
                 </div>
-                <div class="card-body view-exams-card-body text-center">
+                <div class="card-body exams-card-body text-center">
                     <div class="container">
                         <div *ngIf ="exams.length === 0">
                             <p class="alert alert-danger">
@@ -132,8 +129,8 @@
                             </p>
                         </div>
                         <div class="mt-3" *ngFor="let exam of exams">
-                            <div class="card view-exams-card mb-5">
-                                <div class="card-header">
+                            <div class="card exams-card mb-5">
+                                <div class="card-header exams-card-header">
 
                                     <strong> {{ exam.name }} {{ exam.type }}</strong>
                                     <i (click)="deleteExam(exam._id)" class="fa-solid fa-xmark fa-lg" style="color: #ff0000;"></i>
@@ -179,7 +176,7 @@
             <div class="modal-body text-center">
             <div class="container">
                 <div *ngFor="let registeredStudent of selectedExamRegisteredStudents" class="student-card mb-5">
-                    <div class="card view-registered-student-card student-card">
+                    <div class="card registered-student-card student-card">
                         <div class="card-body">
                             <h5> Student Number</h5>
                             <p><strong> {{ registeredStudent.no }} </strong></p>
