Added: Create and delete announcements

--- a/src/app/components/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/components/teacher-dashboard/teacher-dashboard.component.html
@@ -13,6 +13,7 @@
                     <div class="card-footer">
                         <button class="btn btn-outline-primary mt-2 mb-2" (click)="viewStudents()" >View Students</button>
                         <button class="btn btn-outline-dark mt-2 mb-2" (click)="addStudent()" >Add Student</button>
+                        <button class="btn btn-outline-danger mt-2 mb-2" (click)="createAnnouncement()">Announcements</button>
                         <button class="btn btn-outline-info mt-2 mb-2" (click)="createExam()" >Exams</button>
                       </div>
                 </div>
