--- a/src/app/components/teacher-dashboard/create-exam/create-exam.component.css
+++ b/src/app/components/teacher-dashboard/create-exam/create-exam.component.css
@@ -77,6 +77,8 @@ input {
 }
 
 .search-input {
+    margin: 10px;
+    padding: 10px;
     border: 1px solid #afafaf;
     border-radius: 5px;
     outline: none;
